test/spec_vectors/ref_eq/fail/module_5.wat
(module (func (export "eq") (param $r (ref extern)) (result i32) (ref.eq (local.get $r) (local.get $r))))